[package]
name = "clocked-dispatch"
version = "2.0.2"

description = "Provides a clocked message dispatch service"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://jon.tsp.io/crates/clocked_dispatch"
homepage = "https://github.com/jonhoo/clocked-dispatch"
repository = "https://github.com/jonhoo/clocked-dispatch.git"

keywords = ["channel","synchronization","dispatch","message"]

license = "MIT/Apache-2.0"

[dependencies]
time = "0.1"
